HTML: Bug Fixed!

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     />
 
     <!-- styles -->
-    <link rel="stylesheet" href="/src/styles/reset.css" />
-    <link rel="stylesheet" href="/src/styles/main.css" />
+    <link rel="stylesheet" href="./src/styles/reset.css" />
+    <link rel="stylesheet" href="./src/styles/main.css" />
   </head>
 
   <body>
@@ -58,6 +58,6 @@
       </div>
     </div>
 
-    <script defer src="/src/scripts/engine.js"></script>
+    <script defer src="./src/scripts/engine.js"></script>
   </body>
 </html>
