--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="menu-lives">
           <img
-            src="/src/images/player.png"
+            src="./src/images/player.png"
             alt="foto do jogador"
             height="60px"
           />
